fix e2e, align avatar and go to v0.5.0 (#113)
* fix e2e, align avatar and go to v0.5.0

* update homepage pic

--- a/public/pages/signup/SignUpPage.scss
+++ b/public/pages/signup/SignUpPage.scss
@@ -3,6 +3,10 @@
     max-width: 500px !important;
     text-align: center;
 
+    .fdr-avatar {
+        margin-right: 5px;
+    }
+
     .logo {
         height: 100px;
     }
